--- a/2025 Fall - Mod 6 - Week 6 for template.ipynb
+++ b/2025 Fall - Mod 6 - Week 6 for template.ipynb
@@ -441,6 +441,66 @@
     "plt.title(\"Causal DAG: Z is a Collider\", fontsize=14)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34998ee4",
+   "metadata": {},
+   "source": [
+    "# Week 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "666cf38d",
+   "metadata": {},
+   "source": [
+    "Given a dataset, match treated (﻿X equals 1﻿) to untreated (﻿X equals 0﻿) based on the confounder (﻿Z﻿).\n",
+    "\n",
+    "Find the average treatment effect (each item corresponds to one counterfactual) where the counterfactual is the nearest item in the other group (you can use ﻿N e a r e s t N e i g h b o r s﻿ for this.)\n",
+    "\n",
+    "Find the average treatment effect on the treated, where each treated item corresponds to a counterfactual untreated item, but we otherwise ignore the untreated items.\n",
+    "\n",
+    "Find the average treatment effect on the untreated, where each untreated item corresponds to a counterfactual treated item, but we otherwise ignore the treated items.\n",
+    "\n",
+    "Find the optimal treatment effect, which is the maximum treatment effect across all untreated items (i.e., it ends up considering only a single untreated item with its single counterfactual). \n",
+    "\n",
+    "Use the file homework_6.1.csv. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74aa56d6",
+   "metadata": {},
+   "source": [
+    "Question 1\n",
+    "\n",
+    "Which is closest to the average treatment effect? \n",
+    "\n",
+    "Option A\n",
+    "1.832\n",
+    "\n",
+    "Option B\n",
+    "1.695\n",
+    "\n",
+    "Option C\n",
+    "2.014\n",
+    "\n",
+    "Option D\n",
+    "1.583"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7170c234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "import numpy as np"
+   ]
   }
  ],
  "metadata": {
