--- a/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
+++ b/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ac5ccdf0",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "beb5b35d-d0f3-4154-b67e-185ba285484b",
    "metadata": {},
    "outputs": [],
@@ -500,6 +500,279 @@
     "import pandas as pd\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "92ac347f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6 = pd.read_csv(\"homework_6.1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0fcb5675",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Z</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.548814</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.823220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.715189</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.842405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.602763</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.898618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.544883</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.817325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.423655</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.635482</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Z  X         Y\n",
+       "0  0.548814  0 -0.823220\n",
+       "1  0.715189  1  0.842405\n",
+       "2  0.602763  1  0.898618\n",
+       "3  0.544883  0 -0.817325\n",
+       "4  0.423655  0 -0.635482"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df6.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d994d201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Treatment Effect (ATE): 1.6979\n",
+      "Average Treatment Effect on Treated (ATT): 1.8464\n",
+      "Average Treatment Effect on Untreated (ATU): 1.5495\n",
+      "Optimal Treatment Effect: 2.1725\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create treated and untreated groups\n",
+    "treated = df6[df6[\"X\"] == 1].reset_index(drop=True)\n",
+    "untreated = df6[df6[\"X\"] == 0].reset_index(drop=True)\n",
+    "\n",
+    "# nearest neighbors match function\n",
+    "def nearest_match(source, target):\n",
+    "    nn = NearestNeighbors(n_neighbors=1)\n",
+    "    nn.fit(target[[\"Z\"]])\n",
+    "    distances, indices = nn.kneighbors(source[[\"Z\"]])\n",
+    "    return indices.flatten()\n",
+    "\n",
+    "# Match treated to untreated and untreated to treated\n",
+    "treated_to_untreated_idx = nearest_match(treated, untreated)\n",
+    "untreated_to_treated_idx = nearest_match(untreated, treated)\n",
+    "\n",
+    "# Counterfactuals\n",
+    "treated[\"Y_cf\"] = untreated.loc[treated_to_untreated_idx, \"Y\"].values\n",
+    "untreated[\"Y_cf\"] = treated.loc[untreated_to_treated_idx, \"Y\"].values\n",
+    "\n",
+    "# treatment effects\n",
+    "treated[\"TE\"] = treated[\"Y\"] - treated[\"Y_cf\"]\n",
+    "untreated[\"TE\"] = treated.loc[untreated_to_treated_idx, \"Y\"].values - untreated[\"Y\"]\n",
+    "\n",
+    "# ATE = average of all treatment effects (both groups)\n",
+    "ate = (treated[\"TE\"].mean() + untreated[\"TE\"].mean()) / 2\n",
+    "\n",
+    "# ATT = average treatment effect on treated\n",
+    "att = treated[\"TE\"].mean()\n",
+    "\n",
+    "# ATU = average treatment effect on untreated\n",
+    "atu = untreated[\"TE\"].mean()\n",
+    "\n",
+    "# Optimal treatment effect (maximum TE among untreated)\n",
+    "optimal_te = untreated[\"TE\"].max()\n",
+    "\n",
+    "# 4. Print results\n",
+    "print(f\"Average Treatment Effect (ATE): {ate:.4f}\")\n",
+    "print(f\"Average Treatment Effect on Treated (ATT): {att:.4f}\")\n",
+    "print(f\"Average Treatment Effect on Untreated (ATU): {atu:.4f}\")\n",
+    "print(f\"Optimal Treatment Effect: {optimal_te:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad6478f6",
+   "metadata": {},
+   "source": [
+    "# Week 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8544d41",
+   "metadata": {},
+   "source": [
+    "Question 1\n",
+    "\n",
+    "Suppose that a process can be modeled via linear regression: \n",
+    "\n",
+    "\n",
+    "W = np.random.normal(0, 1, (1000,))\n",
+    "X = W + np.random.normal(0, 1, (1000,)) Z = np.random.normal(0, 1, (1000,)) \n",
+    "Y = X + Z + W + np.random.normal(0, 1, (1000,))\n",
+    " \n",
+    "\n",
+    "\n",
+    "Which is closest to the correlation of ﻿X﻿ with the error term in the equation for ﻿Y﻿? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ef952c0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = np.random.normal(0, 1, (1000,))\n",
+    "X = W + np.random.normal(0, 1, (1000,)) \n",
+    "Z = np.random.normal(0, 1, (1000,)) \n",
+    "Y = X + Z + W + np.random.normal(0, 1, (1000,))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07e85248",
+   "metadata": {},
+   "source": [
+    "the error term is \n",
+    "error = Z + W + np.random.normal(0, 1, num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b8ef8965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between X and the error term: 0.40335501644287275\n"
+     ]
+    }
+   ],
+   "source": [
+    "W = np.random.normal(0, 1, (1000,))\n",
+    "X = W + np.random.normal(0, 1, (1000,))\n",
+    "Z = np.random.normal(0, 1, (1000,))\n",
+    "Y = X + Z + W + np.random.normal(0, 1, (1000,))\n",
+    "\n",
+    "# when Y is modeled as depending only on X, the error term = Z + W + random noise\n",
+    "error = Z + W + np.random.normal(0, 1, (1000,))\n",
+    "\n",
+    "# compute correlation between X and the error term\n",
+    "corr = np.corrcoef(X, error)[0, 1]\n",
+    "print(\"Correlation between X and the error term:\", corr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa775290",
+   "metadata": {},
+   "source": [
+    "Question 2\n",
+    "\n",
+    "\n",
+    "If ﻿Y﻿ is written as depending on ﻿X﻿ and ﻿Z﻿ only, ﻿W﻿ is part of the error term. Which, then, is closest to the expected correlation of ﻿X﻿ with the error term in the equation for ﻿Y﻿? \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ceb2ce14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between X and the error term: 0.48407444829165097\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "W = np.random.normal(0, 1, (1000,))\n",
+    "X = W + np.random.normal(0, 1, (1000,))\n",
+    "Z = np.random.normal(0, 1, (1000,))\n",
+    "Y = X + Z + W + np.random.normal(0, 1, (1000,))\n",
+    "\n",
+    "# since Y depends on X and Z only, the error term contains W + random noise\n",
+    "error = W + np.random.normal(0, 1, (1000,))\n",
+    "\n",
+    "# compute correlation between X and the error term\n",
+    "corr = np.corrcoef(X, error)[0, 1]\n",
+    "print(\"Correlation between X and the error term:\", corr)\n"
    ]
   }
  ],
