--- a/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
+++ b/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
@@ -774,6 +774,282 @@
     "corr = np.corrcoef(X, error)[0, 1]\n",
     "print(\"Correlation between X and the error term:\", corr)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4987e31",
+   "metadata": {},
+   "source": [
+    "Question 3\n",
+    "\n",
+    "In the data frame for homework_7.1.csv, control for W by regressing ﻿Y﻿ on ﻿X﻿ and ﻿Z﻿ at the following constant values of ﻿W﻿: -1, 0, and 1. (You cannot literally use a constant value of ﻿W﻿, of course, or you will have only one data point! How will you manage this?) The question is: Is the coefficient of ﻿X﻿  \n",
+    "\n",
+    "Option A\n",
+    "increasing\n",
+    "\n",
+    "Option B\n",
+    "decreasing\n",
+    "\n",
+    "Option C\n",
+    "staying about the same (say, within 0.2 or so) as ﻿W﻿ increases? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ebf0e890",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>X</th>\n",
+       "      <th>W</th>\n",
+       "      <th>Z</th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.137055</td>\n",
+       "      <td>1.221768</td>\n",
+       "      <td>0.327829</td>\n",
+       "      <td>1.944532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.112905</td>\n",
+       "      <td>0.465835</td>\n",
+       "      <td>0.599650</td>\n",
+       "      <td>0.655514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2.077755</td>\n",
+       "      <td>1.795414</td>\n",
+       "      <td>-0.063393</td>\n",
+       "      <td>5.934411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.456373</td>\n",
+       "      <td>-0.512159</td>\n",
+       "      <td>1.177413</td>\n",
+       "      <td>-0.188064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1.012402</td>\n",
+       "      <td>0.080002</td>\n",
+       "      <td>-0.275697</td>\n",
+       "      <td>-0.533775</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0         X         W         Z         Y\n",
+       "0           0  1.137055  1.221768  0.327829  1.944532\n",
+       "1           1 -0.112905  0.465835  0.599650  0.655514\n",
+       "2           2  2.077755  1.795414 -0.063393  5.934411\n",
+       "3           3  0.456373 -0.512159  1.177413 -0.188064\n",
+       "4           4 -1.012402  0.080002 -0.275697 -0.533775"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df7 = pd.read_csv(\"homework_7.1.csv\")\n",
+    "df7.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bf1222e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "When W is around -1, coefficient of X = 0.990090408694134\n",
+      "When W is around 0, coefficient of X = 1.4859822514480032\n",
+      "When W is around 1, coefficient of X = 1.9936504417092331\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Subset the data where W is close to -1\n",
+    "df_w_neg1 = df7[(df7['W'] > -1.5) & (df7['W'] < -0.5)]\n",
+    "model_neg1 = sm.OLS(df_w_neg1['Y'], sm.add_constant(df_w_neg1[['X', 'Z']])).fit()\n",
+    "print(\"When W is around -1, coefficient of X =\", model_neg1.params['X'])\n",
+    "\n",
+    "# W around 0\n",
+    "df_w_0 = df7[(df7['W'] > -0.5) & (df7['W'] < 0.5)]\n",
+    "model_0 = sm.OLS(df_w_0['Y'], sm.add_constant(df_w_0[['X', 'Z']])).fit()\n",
+    "print(\"When W is around 0, coefficient of X =\", model_0.params['X'])\n",
+    "\n",
+    "# W around 1\n",
+    "df_w_1 = df7[(df7['W'] > 0.5) & (df7['W'] < 1.5)]\n",
+    "model_1 = sm.OLS(df_w_1['Y'], sm.add_constant(df_w_1[['X', 'Z']])).fit()\n",
+    "print(\"When W is around 1, coefficient of X =\", model_1.params['X'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f42ea707",
+   "metadata": {},
+   "source": [
+    "Question 4\n",
+    "\n",
+    "\n",
+    "def make_error(corr_const, num): \n",
+    "\n",
+    " err = list() \n",
+    "\n",
+    "    prev = np.random.normal(0, 1) \n",
+    "\n",
+    " for n in range(num): \n",
+    "\n",
+    "    prev = corr_const * prev + (1 - corr_const) * np.random.normal(0, 1) \n",
+    "\n",
+    "    err.append(prev) \n",
+    "\n",
+    "return np.array(err) \n",
+    "\n",
+    "\n",
+    "\n",
+    "Create a linear regression model that uses this function as the error for both (a) the treatment, ﻿X﻿, and (b) the outcome, ﻿Y﻿. (You can use random normal error for any other covariates, if you have them.) \n",
+    "\n",
+    "\n",
+    "\n",
+    "As corr_const increases from 0.2 to 0.5 to 0.8, find (i) the standard deviation of the estimate of the ﻿X﻿ coefficient over many trials, and (ii) the mean of the standard error estimate of the ﻿X﻿ coefficient over many trials. \n",
+    "\n",
+    "\n",
+    "\n",
+    "When corr_const increases, then: \n",
+    "\n",
+    "\n",
+    "\n",
+    "Hint: don't forget to include an intercept in your regression\n",
+    "\n",
+    "Option A\n",
+    "(i) and (ii) remain about the same\n",
+    "\n",
+    "Option B\n",
+    "The ratio (i) / (ii) decreases\n",
+    "\n",
+    "Option C\n",
+    "(i) and (ii) differ, but their ratio remains about the same\n",
+    "\n",
+    "Option D\n",
+    "The ratio (i) / (ii) increases\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bf85ae70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   corr_const  (i) std of β_X  (ii) mean SE  ratio (i)/(ii)\n",
+      "0         0.2        0.029915      0.031531        0.948757\n",
+      "1         0.5        0.041477      0.031510        1.316324\n",
+      "2         0.8        0.067064      0.031621        2.120874\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to make correlated errors\n",
+    "def make_error(corr_const, num):\n",
+    "    err = []\n",
+    "    prev = np.random.normal(0, 1)\n",
+    "    for i in range(num):\n",
+    "        prev = corr_const * prev + (1 - corr_const) * np.random.normal(0, 1)\n",
+    "        err.append(prev)\n",
+    "    return np.array(err)\n",
+    "\n",
+    "corr_levels = [0.2, 0.5, 0.8]\n",
+    "\n",
+    "# To store the results\n",
+    "results = []\n",
+    "\n",
+    "# Fix random seed so we can reproduce results\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# For each correlation level\n",
+    "for corr_const in corr_levels:\n",
+    "    all_betas = []\n",
+    "    all_ses = []\n",
+    "    \n",
+    "    # Run many simulations\n",
+    "    for i in range(100):  # 100 trials\n",
+    "        n = 1000\n",
+    "        \n",
+    "        # Create errors for X and Y\n",
+    "        eX = make_error(corr_const, n)\n",
+    "        eY = make_error(corr_const, n)\n",
+    "        \n",
+    "        # Generate data\n",
+    "        Z = np.random.normal(0, 1, n)\n",
+    "        X = 0.5 * Z + eX\n",
+    "        Y = 1.0 * X + 0.3 * Z + eY\n",
+    "        \n",
+    "        # Run regression: Y ~ X + Z\n",
+    "        X_matrix = sm.add_constant(np.column_stack([X, Z]))\n",
+    "        model = sm.OLS(Y, X_matrix).fit()\n",
+    "        \n",
+    "        # Save the coefficient for X and its standard error\n",
+    "        all_betas.append(model.params[1])  # X coefficient\n",
+    "        all_ses.append(model.bse[1])       # X standard error\n",
+    "    \n",
+    "    # Compute (i) and (ii)\n",
+    "    std_dev_of_betas = np.std(all_betas)\n",
+    "    mean_se = np.mean(all_ses)\n",
+    "    ratio = std_dev_of_betas / mean_se\n",
+    "    \n",
+    "    # Save the results\n",
+    "    results.append([corr_const, std_dev_of_betas, mean_se, ratio])\n",
+    "\n",
+    "# Show results\n",
+    "results_df = pd.DataFrame(results, columns=[\"corr_const\", \"(i) std of β_X\", \"(ii) mean SE\", \"ratio (i)/(ii)\"])\n",
+    "print(results_df)\n"
+   ]
   }
  ],
  "metadata": {
