homework reflection draft

--- a/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
+++ b/2025 Fall - Mod 6 - Rain Dimen - Week 5-8.ipynb
@@ -1050,6 +1050,570 @@
     "results_df = pd.DataFrame(results, columns=[\"corr_const\", \"(i) std of β_X\", \"(ii) mean SE\", \"ratio (i)/(ii)\"])\n",
     "print(results_df)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be44ec99",
+   "metadata": {},
+   "source": [
+    "# Week 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a0a2994",
+   "metadata": {},
+   "source": [
+    "Using homework_8.1.csv, find the Average treatment effect with inverse probability weighting. Then, include your code and a written explanation of your work (mentioning any choices or strategies you made in writing the code) in your homework reflection.  \n",
+    "\n",
+    "\n",
+    "\n",
+    "Here are some steps to follow: \n",
+    "\n",
+    "\n",
+    "\n",
+    "* Estimate the propensity scores using logistic regression. Fit the model so that the Z values predict ﻿X﻿. \n",
+    "\n",
+    "* Use the model to predict the propensity scores (e.g., using predict_proba if you are using sklearn). \n",
+    "\n",
+    "* Calculate inverse probability weights (﻿1 over P﻿ for ﻿X equals 1﻿ and ﻿fraction numerator 1 over denominator 1 minus P end fraction﻿ for ﻿X equals 0﻿). \n",
+    "\n",
+    "* Estimate the average treatment effect (the Y difference between ﻿X equals 1﻿ and ﻿X equals 0﻿, using the appropriate weights for each). \n",
+    "\n",
+    "\n",
+    "\n",
+    "Then, the ATE is closest to: \n",
+    "\n",
+    "Option A\n",
+    "2.6\n",
+    "\n",
+    "Option B\n",
+    "2.9\n",
+    "\n",
+    "Option C\n",
+    "2.3\n",
+    "\n",
+    "Option D\n",
+    "2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "31a60775",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.109218</td>\n",
+       "      <td>1.764052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.259504</td>\n",
+       "      <td>0.400157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.647584</td>\n",
+       "      <td>0.978738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.106071</td>\n",
+       "      <td>2.240893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.583464</td>\n",
+       "      <td>1.867558</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  X         Y         Z\n",
+       "0           0  1  4.109218  1.764052\n",
+       "1           1  0  2.259504  0.400157\n",
+       "2           2  0 -0.647584  0.978738\n",
+       "3           3  0  2.106071  2.240893\n",
+       "4           4  1  3.583464  1.867558"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df8 = pd.read_csv(\"homework_8.1.csv\")\n",
+    "df8.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15958468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# 1️⃣ Load the dataset\n",
+    "df = pd.read_csv(\"homework_8.1.csv\")\n",
+    "\n",
+    "# Assume the columns are: Z (covariate), X (treatment), Y (outcome)\n",
+    "Z = df[[\"Z\"]]\n",
+    "X = df[\"X\"]\n",
+    "Y = df[\"Y\"]\n",
+    "\n",
+    "# 2️⃣ Estimate propensity scores with logistic regression\n",
+    "# Model P(X=1 | Z)\n",
+    "log_model = LogisticRegression()\n",
+    "log_model.fit(Z, X)\n",
+    "\n",
+    "# 3️⃣ Predict propensity scores\n",
+    "P = log_model.predict_proba(Z)[:, 1]\n",
+    "\n",
+    "# 4️⃣ Compute inverse probability weights\n",
+    "weights = np.where(X == 1, 1 / P, 1 / (1 - P))\n",
+    "\n",
+    "# 5️⃣ Estimate weighted averages of Y for treated and untreated\n",
+    "ATE = (np.sum(weights * (X * Y)) / np.sum(weights * X)) - \\\n",
+    "      (np.sum(weights * ((1 - X) * Y)) / np.sum(weights * (1 - X)))\n",
+    "\n",
+    "print(f\"Average Treatment Effect (ATE) ≈ {ATE:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d7fd9da1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATE ≈ 2.274\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "Z = df8[[\"Z\"]]\n",
+    "X = df8[\"X\"]\n",
+    "Y = df8[\"Y\"]\n",
+    "\n",
+    "log_model = LogisticRegression()\n",
+    "log_model.fit(Z, X)\n",
+    "\n",
+    "P = log_model.predict_proba(Z)[:, 1]\n",
+    "\n",
+    "# IPW\n",
+    "weights = np.where(X == 1, 1 / P, 1 / (1 - P))\n",
+    "\n",
+    "ATE = (np.sum(weights * (X * Y)) / np.sum(weights * X)) - \\\n",
+    "      (np.sum(weights * ((1 - X) * Y)) / np.sum(weights * (1 - X)))\n",
+    "\n",
+    "print(f\"ATE ≈ {ATE:.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7e0c9cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84 0.58 0.71]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 2\n",
+    "\n",
+    "print(np.round(P[:3], 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3b55850b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z1</th>\n",
+       "      <th>Z2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.652085</td>\n",
+       "      <td>1.764052</td>\n",
+       "      <td>2.320015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.590221</td>\n",
+       "      <td>0.400157</td>\n",
+       "      <td>1.292631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.898981</td>\n",
+       "      <td>0.978738</td>\n",
+       "      <td>0.556423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.857179</td>\n",
+       "      <td>2.240893</td>\n",
+       "      <td>2.345607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.647489</td>\n",
+       "      <td>1.867558</td>\n",
+       "      <td>2.095611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>995</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.336848</td>\n",
+       "      <td>0.412871</td>\n",
+       "      <td>0.510622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>996</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.936869</td>\n",
+       "      <td>-0.198399</td>\n",
+       "      <td>1.203125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>997</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1.346745</td>\n",
+       "      <td>0.094192</td>\n",
+       "      <td>0.252626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>998</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.414432</td>\n",
+       "      <td>-1.147611</td>\n",
+       "      <td>-2.289512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.510343</td>\n",
+       "      <td>-0.358114</td>\n",
+       "      <td>-1.669084</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0  X         Y        Z1        Z2\n",
+       "0             0  1  4.652085  1.764052  2.320015\n",
+       "1             1  1  2.590221  0.400157  1.292631\n",
+       "2             2  1  3.898981  0.978738  0.556423\n",
+       "3             3  1  5.857179  2.240893  2.345607\n",
+       "4             4  1  3.647489  1.867558  2.095611\n",
+       "..          ... ..       ...       ...       ...\n",
+       "995         995  1  5.336848  0.412871  0.510622\n",
+       "996         996  1  0.936869 -0.198399  1.203125\n",
+       "997         997  0 -1.346745  0.094192  0.252626\n",
+       "998         998  0  0.414432 -1.147611 -2.289512\n",
+       "999         999  0  1.510343 -0.358114 -1.669084\n",
+       "\n",
+       "[1000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df82 = pd.read_csv(\"homework_8.2.csv\")\n",
+    "df82"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d13b1c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATE ≈ 3.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 3\n",
+    "\n",
+    "from scipy.spatial.distance import mahalanobis\n",
+    "from numpy.linalg import inv\n",
+    "\n",
+    "df82 = pd.read_csv(\"homework_8.2.csv\")\n",
+    "\n",
+    "# treated (X=1), untreated (X=0)\n",
+    "treated = df82[df82[\"X\"] == 1].reset_index(drop=True)\n",
+    "untreated = df82[df82[\"X\"] == 0].reset_index(drop=True)\n",
+    "\n",
+    "Z = df82[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "\n",
+    "cov_matrix = np.cov(Z, rowvar=False)\n",
+    "inv_cov = inv(cov_matrix)\n",
+    "\n",
+    "# matching using Mahalanobis distance\n",
+    "matches = []\n",
+    "for i in range(len(treated)):\n",
+    "    z_treated = treated.loc[i, [\"Z1\", \"Z2\"]].to_numpy()\n",
+    "    distances = [mahalanobis(z_treated, untreated.loc[j, [\"Z1\", \"Z2\"]].to_numpy(), inv_cov)\n",
+    "                 for j in range(len(untreated))]\n",
+    "    nearest_index = np.argmin(distances)\n",
+    "    matches.append(untreated.loc[nearest_index, \"Y\"])\n",
+    "\n",
+    "treated[\"Y_cf\"] = matches\n",
+    "treated[\"TE\"] = treated[\"Y\"] - treated[\"Y_cf\"]\n",
+    "\n",
+    "ATE = treated[\"TE\"].mean()\n",
+    "print(f\"ATE ≈ {ATE:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7d5d0ddb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treated item with least common support (Z1, Z2): (2.7, 0.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 4\n",
+    "\n",
+    "from scipy.spatial.distance import cdist\n",
+    "\n",
+    "# ✅ Compute Mahalanobis distances between all treated and untreated observations\n",
+    "treated_Z = treated[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "untreated_Z = untreated[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "\n",
+    "# Create full distance matrix\n",
+    "dist_matrix = cdist(treated_Z, untreated_Z, metric=\"mahalanobis\", VI=inv_cov)\n",
+    "\n",
+    "# For each treated item, find the nearest untreated (minimum distance)\n",
+    "nearest_dists = dist_matrix.min(axis=1)\n",
+    "\n",
+    "# Find the treated item with the largest of those minimum distances\n",
+    "idx_farthest = np.argmax(nearest_dists)\n",
+    "\n",
+    "# Extract its Z1, Z2 values\n",
+    "worst_Z = treated.loc[idx_farthest, [\"Z1\", \"Z2\"]]\n",
+    "print(\"Treated item with least common support (Z1, Z2):\", tuple(np.round(worst_Z, 1)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "94d621c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treated item with least common support (Z1, Z2): (2.7, 0.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 4\n",
+    "\n",
+    "distances = []\n",
+    "for i in range(len(treated)):\n",
+    "    z_treated = treated.loc[i, [\"Z1\", \"Z2\"]].to_numpy()\n",
+    "    dists = [mahalanobis(z_treated, untreated.loc[j, [\"Z1\", \"Z2\"]].to_numpy(), inv_cov)\n",
+    "             for j in range(len(untreated))]\n",
+    "    distances.append(np.min(dists))  \n",
+    "\n",
+    "idx_farthest = np.argmax(distances)\n",
+    "worst_Z = treated.loc[idx_farthest, [\"Z1\", \"Z2\"]]\n",
+    "\n",
+    "print(\"Treated item with least common support (Z1, Z2):\", tuple(np.round(worst_Z, 1)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1086391f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treated item with least common support (exact): (np.float64(2.69622405256358), np.float64(0.5381554886023228))\n",
+      "Rounded to match options: (np.float64(2.7), np.float64(0.5))\n",
+      "Nearest untreated to that treated (Z1, Z2): (np.float64(1.5199948607657727), np.float64(-1.2822079376259403))\n",
+      "Mahalanobis distance to nearest untreated: 1.3830045328325058\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from numpy.linalg import inv, pinv\n",
+    "from scipy.spatial.distance import cdist\n",
+    "\n",
+    "# Load\n",
+    "df = pd.read_csv(\"homework_8.2.csv\")\n",
+    "\n",
+    "# Split\n",
+    "treated = df[df[\"X\"] == 1].reset_index(drop=True)\n",
+    "untreated = df[df[\"X\"] == 0].reset_index(drop=True)\n",
+    "\n",
+    "# Covariates\n",
+    "Z_all = df[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "Z_t = treated[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "Z_u = untreated[[\"Z1\", \"Z2\"]].to_numpy()\n",
+    "\n",
+    "# Inverse covariance of all Z1/Z2 (2x2)\n",
+    "cov = np.cov(Z_all, rowvar=False)\n",
+    "# Use pinv for numerical stability (falls back to inv if you want)\n",
+    "VI = pinv(cov)\n",
+    "\n",
+    "# Distance matrix: rows = treated, cols = untreated\n",
+    "D = cdist(Z_t, Z_u, metric=\"mahalanobis\", VI=VI)\n",
+    "\n",
+    "# Nearest untreated distance for each treated\n",
+    "nearest_dists = D.min(axis=1)\n",
+    "nearest_idxs  = D.argmin(axis=1)\n",
+    "\n",
+    "# Treated with least common support = largest nearest distance\n",
+    "i_farthest = int(nearest_dists.argmax())\n",
+    "\n",
+    "# Z1, Z2 of that treated item\n",
+    "z1, z2 = treated.loc[i_farthest, [\"Z1\", \"Z2\"]].to_numpy()\n",
+    "\n",
+    "print(\"Treated item with least common support (exact):\", (z1, z2))\n",
+    "print(\"Rounded to match options:\", (np.round(z1, 1), np.round(z2, 1)))\n",
+    "\n",
+    "# (Optional) also show the nearest untreated it matched to and the distance\n",
+    "j_nearest = int(nearest_idxs[i_farthest])\n",
+    "z1_u, z2_u = untreated.loc[j_nearest, [\"Z1\", \"Z2\"]].to_numpy()\n",
+    "print(\"Nearest untreated to that treated (Z1, Z2):\", (z1_u, z2_u))\n",
+    "print(\"Mahalanobis distance to nearest untreated:\", float(nearest_dists[i_farthest]))\n"
+   ]
   }
  ],
  "metadata": {
